cluster/apps/external-services/pbs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app pbs
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    # traefik.ingress.kubernetes.io/service.serversscheme: "https"
spec:
  type: ExternalName
  externalName: pbs.${SECRET_PRIVATE_DOMAIN}.
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8007
